# advent-of-code

./: .gitignore  pyproject.toml
15/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  17.py  18.py  19.py  20.py  25.py
16/: 01.py
17/: 01.py
18/: 01.py
19/: 01.py
20/: 01.py
21/: day-1-input.txt  day1.py  day10a.py  day10b.py  day11a.py  day12a.py  day12b.py  day13a.py  day14a.py  day14b.py  day15a.py  day15b.py  day16a.py  day17a.py  day17b.py  day18a.py  day19a.py  day1b.py  day2.py  day20a.py  day21a.py  day21b.py  day22a.py  day2b.py  day3a.py  day3b.py  day4a.py  day4b.py  day5a.py  day5b.py  day6.py  day7a.py  day7b.py  day8b.py  day9a.py  day9b.py  pyproject.toml
22/: 10a.py  11a.py  11b.py  12a.py  13a.py  14a.py  15a.py  15b.py  2a.py  2b.py  3a.py  3b.py  4a.py  5a.py  5b.py  6a.py  7a.py  8a.py  8b.py  9a.py  9b.py  day1a.py  day1b.py  pyproject.toml
23/: 01.py
24/: 01.py
