[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
aocd = "^0.1"
rich = "^12.6.0"
more-itertools = "^9.0.0"
networkx = "^2.8.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
