[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advent-of-code-data>=2.1.0",
    "attrs>=25.3.0",
    "cattrs>=25.1.1",
    "click>=8.2.1",
    "humanize>=4.12.3",
    "networkx>=3.5",
    "pyparsing[diagrams]>=3.2.3",
    "rich>=14.1.0",
    "ruff>=0.12.8",
]
