[tool.poetry]
name = "advent-of-code-2021"
version = "0.1.0"
description = ""
authors = ["Tom Eastman <tom@eastman.nz>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.15.2"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
