[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Tom Eastman <tom@eastman.nz>"]

[tool.poetry.dependencies]
python = "^3.10"
aocd = "^0.1"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
